04-modules/sample2/sg/sg.tf
resource "aws_security_group" "sg" {
  name = "SG1"
  description = "open to all"
  vpc_id = "vpc-00d8562e94bdc1820"

  ingress {
    from_port = 22
    protocol  = "tcp"
    to_port   = 22
    description = "SSH"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    protocol  = "tcp"
    to_port   = 80
    description = "HTTP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    protocol  = "-1"
    to_port   = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}

output "secgro" {
  value = aws_security_group.sg.id
}
